Fix weird scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,6 @@ body {
 .item-container {
   padding: 5px 5px 0;
   display: flex;
-  justify-content: center;
   position: relative;
 }
 
